--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ new_spectra/asdb_cicyg_20100825_141.fit
 new_spectra/Pièce jointe sans titre 00022.htm
 new_spectra/Pièce jointe sans titre 00025.htm
 figures/asdb_bllac_20210705_016.png
+data/last_update_archive.txt
